syntax = "proto3";

import "google/protobuf/empty.proto";

package file_service;

message FileList {
  repeated string files = 1;
}

service FileService {
  rpc ListFiles (google.protobuf.Empty) returns (FileList);
}
